# shipyard

./: .env.example  .gitignore  LICENSE  README.md  install.sh
.github/workflows/: ci.yml  docker-backend.yml  docker-frontend.yml  docker.yml
backend/: .gitignore  Cargo.toml  Dockerfile  _rust-toolchain.toml  rust-toolchain.toml
backend/crates/api/: Cargo.toml
backend/crates/api/src/: alerts.rs  cache.rs  email.rs  error.rs  main.rs  routes.rs  shorthand.rs
backend/crates/api/src/admin/: mod.rs
backend/crates/api/src/artifact_source/: mod.rs
backend/crates/api/src/artifactory/: mod.rs
backend/crates/api/src/auth/: mod.rs  oauth.rs  routes.rs
backend/crates/api/src/billing/: mod.rs
backend/crates/api/src/compose/: mod.rs
backend/crates/api/src/compute/: mod.rs
backend/crates/api/src/containers/: mod.rs
backend/crates/api/src/dbclient/: mod.rs
backend/crates/api/src/deployments/: mod.rs
backend/crates/api/src/edge_functions/: invoke.rs  manager.rs  mod.rs  models.rs  quota.rs  routes.rs  runtime_worker.rs
backend/crates/api/src/git_providers/: mod.rs
backend/crates/api/src/logs/: mod.rs
backend/crates/api/src/middleware/: audit.rs  mod.rs  rate_limit.rs  rbac.rs
backend/crates/api/src/nodes/: mod.rs
backend/crates/api/src/orgs/: mod.rs
backend/crates/api/src/plans/: mod.rs
backend/crates/api/src/projects/: mod.rs
backend/crates/api/src/provisioning/: mod.rs
backend/crates/api/src/resources/: mod.rs
backend/crates/api/src/services/: mod.rs
backend/crates/api/src/settings/: mod.rs
backend/crates/api/src/setup/: mod.rs
backend/crates/api/src/static_site/: mod.rs
backend/crates/api/src/templates/: mod.rs
backend/crates/api/src/topology/: mod.rs
backend/crates/api/src/webhooks/: mod.rs
backend/crates/common/: Cargo.toml
backend/crates/common/src/: config.rs  crypto.rs  error.rs  lib.rs  permissions.rs  types.rs
backend/crates/db/: Cargo.toml  build.rs
backend/crates/db/migrations/: 20250101000001_full_schema.sql  20250101000002_templates.sql  20250101000003_audit_and_image.sql  20250101000004_service_ports.sql  20250101000005_project_volumes.sql  20250101000006_docker_resource_ids.sql  20250101000007_domain_cert_port.sql  20250101000008_git_service_fields.sql  20250101000009_permissions.sql  20250101000010_service_parent_id.sql  20250101000011_project_members_and_invite_projects.sql  20250101000012_queued_deployment_status.sql  20250101000013_api_keys.sql  20250101000014_deployed_image.sql  20250101000015_service_resource_limits.sql  20250101000016_service_auto_deploy.sql  20250101000017_permission_strings_v2.sql  20250101000018_api_keys_permissions.sql  20250101000019_audit_actor.sql  20250101000020_static_site.sql  20250101000021_service_env_refs.sql  20250101000022_static_git_strategy.sql  20250101000023_service_git_strategy.sql  20250101000024_multiple_git_providers.sql  20250101000025_service_icon.sql  20250101000026_update_existing_icons.sql  20250101000027_docker_and_html5_icons.sql  20250101000028_saas_billing_and_nodes.sql  20250101000029_superadmin.sql  20250101000030_plans_and_user_suspend.sql  20250101000031_staff_permissions.sql  20250101000032_payments.sql  20250101000033_plan_links.sql  20250101000034_org_quota.sql  20250101000035_edge_functions.sql  20250101000036_edge_function_groups_project.sql  20250101000037_edge_function_domains.sql  20250101000038_edge_artifact_path.sql  20250101000039_edge_fn_group_deploy_strategy.sql  20250101000040_registry_platform_settings.sql  (+10 more)
backend/crates/db/src/: lib.rs  models.rs  redis.rs  repo.rs
backend/crates/db/tests/: migrations.rs
backend/crates/docker/: Cargo.toml
backend/crates/docker/src/: engine.rs  lib.rs  types.rs
backend/crates/docker_worker/: Cargo.toml
backend/crates/docker_worker/src/: lib.rs  worker.rs
backend/crates/engine/: Cargo.toml
backend/crates/engine/src/: artifact.rs  edge_artifact.rs  edge_fn_config.rs  edge_fn_detector.rs  lib.rs  ssr.rs  static_site.rs
backend/crates/git/: Cargo.toml
backend/crates/git/src/: lib.rs
backend/crates/mqtt_broker/: Cargo.toml
backend/crates/mqtt_broker/src/: client.rs  event_loop.rs  lib.rs  publisher.rs  subscription.rs  topics.rs
backend/crates/node_agent/: Cargo.toml
backend/crates/node_agent/src/: main.rs
backend/crates/openapi/: Cargo.toml
backend/crates/openapi/src/: auth.rs  error.rs  lib.rs  response.rs
backend/crates/openapi/src/routes/: deployments.rs  keys.rs  mod.rs  orgs.rs  projects.rs  services.rs
backend/crates/registry/: Cargo.toml
backend/crates/registry/src/: auth.rs  blobs.rs  error.rs  kinds.rs  lib.rs  manifests.rs  push.rs  router.rs
backend/crates/registry/src/storage/: local.rs  mod.rs  s3.rs
backend/crates/traefik/: Cargo.toml
backend/crates/traefik/src/: labels.rs  lib.rs
examples/astro/: package.json
examples/edge-functions/: .env.example  dev.ts  shipyard.json
examples/edge-functions/functions/: hello.ts  image-resize.ts  send-email.ts  stripe-webhook.ts
examples/hugo/: hugo.toml  shipyard.json
examples/hugo/content/: _index.md
examples/jekyll/: _config.yml  index.html  shipyard.json
examples/nextjs/: package.json  shipyard.json
examples/nextjs/app/: layout.jsx  (+1 more)
examples/nuxt/: nuxt.config.ts  package.json  shipyard.json
examples/sveltekit/: package.json  shipyard.json  svelte.config.js  vite.config.js
examples/vite/: index.html  package-lock.json  package.json  shipyard.json
frontend/: .env.example  Dockerfile  package-lock.json  package.json  server.js  svelte.config.js  vite.config.ts
frontend/src/: app.html  hooks.server.ts
frontend/static/: worker-setup.sh
infra/: docker-compose.dev.yml
infra/mosquitto/: mosquitto.conf
infra/postgres/: init.sql
infra/rmqtt/: rmqtt.toml
infra/traefik/: traefik.yml
landing/: Dockerfile  README.md  nginx.conf  package-lock.json  package.json  vite.config.ts
landing/src/: app.html
landing/static/: install.sh  robots.txt
plans/: plan.md
runtime/: Dockerfile  main.ts
scripts/: backup.sh  dev.sh  install.sh  patch-nginx-static.sh  patch.sh  update.sh  worker-setup.sh
(+184 files in other folders)
