[package]
name = "shipyard-common"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
config = { workspace = true }
dotenvy = { workspace = true }
aes-gcm = { workspace = true }
hex = { workspace = true }
base64 = "0.22"
