[package]
name = "shipyard-mqtt"
version.workspace = true
edition.workspace = true

[dependencies]
shipyard-common = { path = "../common" }
rumqttc = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
bytes = { workspace = true }
