[package]
name = "shipyard-registry"
version.workspace = true
edition.workspace = true

[dependencies]
shipyard-common = { path = "../common" }
shipyard-db     = { path = "../db" }

tokio       = { workspace = true }
axum        = { workspace = true }
sqlx        = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
uuid        = { workspace = true }
chrono      = { workspace = true }
thiserror   = { workspace = true }
anyhow      = { workspace = true }
tracing     = { workspace = true }
async-trait = { workspace = true }
bytes       = { workspace = true }
futures     = { workspace = true }
sha2          = { workspace = true }
hex           = { workspace = true }
base64        = { workspace = true }
jsonwebtoken  = { workspace = true }
tokio-util    = { version = "0.7", features = ["io"] }
tempfile      = "3"

# S3 backend — pinned to last versions with MSRV = 1.91.1 (matching _rust-toolchain.toml).
# aws-sdk-s3 1.138.0 / aws-config 1.9.0 / credential-types 1.3.0 bumped to MSRV 1.94.1.
rust-s3 = {version = "0.37.2",default-features = false,features = ["tokio-rustls-tls"]}


[features]
default = ["local"]
local   = []
s3      = []
