[package]
name = "shipyard-traefik"
version.workspace = true
edition.workspace = true

[dependencies]
shipyard-common = { path = "../common" }
uuid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
